<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_offline"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:visibility="gone">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_cloud_off"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_description_no_internet_image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline_layout_check_connection"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:padding="16dp"
        />
    <Button
        android:id="@+id/button_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline_layout_button_refresh"
        android:padding="16dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
</LinearLayout>