<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/color_details_background"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="8dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:columnCount="2"
        android:rowCount="4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_column="0"
            tools:text="/User/asdasdqw"
            android:id="@+id/tv_username"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Large"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/account_star_variant"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:contentDescription="@string/content_description_post_carma_icon" />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/comment_multiple_outline"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:contentDescription="@string/content_description_comment_carma_icon" />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/clock"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:contentDescription="@string/content_description_joined_at_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Post Carma"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_row="1"
            android:padding="8dp"
            android:id="@+id/tv_user_post_carma"
            android:textAppearance="@android:style/TextAppearance.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Comment Carma"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:layout_row="2"
            android:id="@+id/tv_user_comment_carma"
            android:textAppearance="@android:style/TextAppearance.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Reddit age"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:layout_row="3"
            android:id="@+id/tv_user_joined_at"
            android:textAppearance="@android:style/TextAppearance.Medium"/>
    </GridLayout>
</android.support.v7.widget.CardView>